@@ -32,6 +32,7 @@ import java.nio.charset.StandardCharsets;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.UUID;
 
 import static org.bitcoinj.core.Utils.HEX;
 
@@ -102,12 +103,15 @@ public class TestFilter {
                 1,
                 1,
                 1,
-                Collections.emptyList()
+                Collections.emptyList(),
+                List.of("test1.onion:1221"),
+                List.of("test2.onion:1221"),
+                UUID.randomUUID().toString()
         );
     }
 
     public static Filter signFilter(Filter unsignedFilter, ECKey signerKey) {
-        byte[] filterData = unsignedFilter.toProtoMessage().toByteArray();
+        byte[] filterData = unsignedFilter.serializeForHash();
         Sha256Hash hash = Sha256Hash.of(filterData);
 
         ECKey.ECDSASignature ecdsaSignature = signerKey.sign(hash);
